# ETrun

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTORS.md  ChangeLog  Dockerfile.build  ETrun.sln  Makefile.am  Makefile.in  README  README.md  Vagrantfile  appveyor.yml  bootstrap  bootstrap.bat  build.sh  configure  configure.ac  crosscompile.sh  linux_compile.sh  make.sh  makebundle.sh  mkdocs.yml  osx_compile.sh  release.sh  uncrustify.cfg  uncrustify.sh  windows_compile.sh
.github/workflows/: ci.yml  codeql-analysis.yml  coverity.yml
docker/: Dockerfile  Readme.md  run.sh
docs/: client_commands.md  client_cvars.md  index.md  server_cvars.md  terminology.md
etrun/custommapscripts/: KJ.script  adlernest.script  battery.script  bigbertha1.script  blackwhite.script  braundorf_b4.script  bremen_b2.script  bremen_b3.script  chocojump1_3.script  flynocerous.script  freestyle.script  frostbite.script  fueldump.script  goldrush.script  kj.script  kylerun1.script  kylerun2.script  kylerun3.script  kylerun4.script  ldtj_b1.script  lnatrickjump.script  nejijump5_b5.script  oasis.script  quakejump.script  radar.script  railgun.script  sp_delivery_te.script  supply.script  tutorialjump.script
etrun/gfx/2d/: ETrun_logo_256.tga  ETrun_world_flags.tga
etrun/gfx/2d/keyset1/: key_backward_not_pressed.tga  key_backward_pressed.tga  key_crouch_not_pressed.tga  key_crouch_pressed.tga  key_forward_not_pressed.tga  key_forward_pressed.tga  key_jump_not_pressed.tga  key_jump_pressed.tga  key_left_not_pressed.tga  key_left_pressed.tga  key_prone_not_pressed.tga  key_prone_pressed.tga  key_right_not_pressed.tga  key_right_pressed.tga  key_sprint_not_pressed.tga  key_sprint_pressed.tga
etrun/gfx/2d/keyset2/: key_backward_not_pressed.tga  key_backward_pressed.tga  key_crouch_not_pressed.tga  key_crouch_pressed.tga  key_forward_not_pressed.tga  key_forward_pressed.tga  key_jump_not_pressed.tga  key_jump_pressed.tga  key_left_not_pressed.tga  key_left_pressed.tga  key_prone_not_pressed.tga  key_prone_pressed.tga  key_right_not_pressed.tga  key_right_pressed.tga  key_sprint_not_pressed.tga  key_sprint_pressed.tga
etrun/gfx/2d/keyset3/: key_backward_pressed.tga  key_crouch_pressed.tga  key_forward_pressed.tga  key_jump_pressed.tga  key_left_pressed.tga  key_prone_pressed.tga  key_right_pressed.tga  key_sprint_pressed.tga
etrun/scripts/: triggers.SHADER
etrun/ui/: credits_activision.menu  etrun.menu  etrun_customise_game.menu  etrun_customise_hud.menu  etrun_customise_misc.menu  etrun_help.menu  global.menu  hostgame.menu  hostgame_advanced.menu  hostgame_advanced_default.menu  ingame_main.menu  ingame_messagemode.menu  ingame_vote.menu  ingame_vote_disabled.menu  ingame_vote_map.menu  ingame_vote_misc.menu  ingame_vote_misc_refrcon.menu  ingame_vote_players.menu  ingame_vote_players_warn.menu  main.menu  menudef.h  menus.txt  mods.menu  options_controls.menu  options_customise_game.menu  options_customise_hud.menu  options_system.menu  options_system_gamma.menu  playonline.menu  playonline_enablepb.menu  popup_errormessage.menu  popup_serverredirect.menu  profile.menu  profile_create.menu  profile_create_initial.menu  quit.menu  vid_confirm.menu  viewreplay.menu
libs/APImodule.xcodeproj/: project.pbxproj
libs/geoip/: geoip.c  geoip.h  update.sh
libs/pthreads-w32-2-9-1/: .gitignore  pthread.vcxproj  pthread.vcxproj.filters
provisioning/: site.yml
src/: ETrun_new.sln  ETrun_vs2010.sln  ETrun_vs2012.sln
src/cgame/: Makefile.am  Makefile.in  cg_atmospheric.c  cg_character.c  cg_commandmap.c  cg_consolecmds.c  cg_debriefing.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_fireteamoverlay.c  cg_fireteams.c  cg_flamethrower.c  cg_info.c  cg_limbopanel.c  cg_loadpanel.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_missionbriefing.c  cg_multiview.c  cg_newDraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_polybus.c  cg_popupmessages.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_spawn.c  cg_syscalls.c  cg_timerun_draw.c  cg_trails.c  (+7 more)
src/cgame.xcodeproj/: project.pbxproj
src/game/: Makefile.am  Makefile.in  Makefile.in.orig  bg_animation.c  bg_animgroup.c  bg_character.c  bg_classes.c  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  bg_sscript.c  bg_tracemap.c  bg_version.h.in  bg_weapons.c  g_active.c  g_alarm.c  g_antilag.c  g_api.c  g_api.h  g_apicmds.c  g_buddy_list.c  g_character.c  g_client.c  g_cmds.c  g_cmds_ext.c  g_combat.c  g_config.c  g_construction.c  g_crash.c  g_fireteams.c  g_func_decs.h  g_funcs.h  g_geoip.c  g_geoip.h  g_items.c  g_local.h  g_log.c  g_main.c  (+32 more)
src/game.xcodeproj/: project.pbxproj
src/libs/pthreads-w32-2-9-1/: pthread.vcxproj  version.rc
src/models/: start_1.mm3d  start_2.mm3d  start_3.mm3d  start_4.mm3d  start_5.mm3d  start_6.mm3d  start_7.mm3d  start_8.mm3d  stop_1.mm3d  stop_2.mm3d  stop_3.mm3d  stop_4.mm3d  stop_5.mm3d  stop_6.mm3d  stop_7.mm3d  stop_8.mm3d
src/textures/: start_1.psd  start_2.psd  start_3.psd  start_4.psd  start_5.psd  start_6.psd  start_7.psd  start_8.psd  stop_1.psd  stop_2.psd  stop_3.psd  stop_4.psd  stop_5.psd  stop_6.psd  stop_7.psd  stop_8.psd
src/ui/: Makefile.am  Makefile.in  keycodes.h  ui.vcxproj  ui.vcxproj.filters  ui_atoms.c  ui_gameinfo.c  ui_loadpanel.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
src/ui.xcodeproj/: project.pbxproj
test/: linux.config.example  osx.config.example  other.config  other.config.example  test.sh
test/linux/: test.sh  test_api.sh  test_api_developer.sh  test_client.sh  test_developer.sh
test/osx/: test.sh  test_api.sh  test_api_developer.sh  test_client.sh  test_developer.sh
test/unix/: linux.config.example  osx.config.example  other.config.example  test.sh
test/win32/: test.bat  test_api.bat  test_api_developer.bat  test_api_developer_ap.bat  test_api_developer_vet.bat  test_api_developer_vq3.bat  test_client.bat  test_dedicated_server.bat  test_dedicated_server_developer.bat  test_developer.bat
(+20 files in other folders)
