lib_LTLIBRARIES = libcgame.la

# Compilation flags
libcgame_la_CFLAGS = -DCGAMEDLL -pipe -Wall -Werror -fno-strict-aliasing

# Linker options
libcgame_la_LDFLAGS = -avoid-version

# Source files
libcgame_la_SOURCES = \
../game/bg_animation.c \
../game/bg_animgroup.c \
../game/bg_character.c \
../game/bg_classes.c \
../game/bg_misc.c \
../game/bg_pmove.c \
../game/bg_slidemove.c \
../game/bg_sscript.c \
../game/bg_tracemap.c \
../game/bg_weapons.c \
../game/q_math.c \
../game/q_shared.c \
../ui/ui_shared.c cg_atmospheric.c \
cg_character.c \
cg_consolecmds.c \
cg_draw.c \
cg_drawtools.c \
cg_effects.c \
cg_ents.c \
cg_event.c \
cg_fireteamoverlay.c \
cg_fireteams.c \
cg_flamethrower.c \
cg_info.c \
cg_limbopanel.c \
cg_loadpanel.c \
cg_localents.c \
cg_main.c \
cg_marks.c \
cg_missionbriefing.c \
cg_newDraw.c \
cg_particles.c \
cg_players.c \
cg_playerstate.c \
cg_polybus.c \
cg_popupmessages.c \
cg_predict.c \
cg_scoreboard.c \
cg_servercmds.c \
cg_snapshot.c \
cg_sound.c \
cg_spawn.c \
cg_syscalls.c \
cg_trails.c \
cg_view.c \
cg_weapons.c \
cg_window.c \
cg_timerun_draw.c
