lib_LTLIBRARIES = libgame.la

# Compilation flags
libgame_la_CFLAGS = -DGAMEDLL -pipe -Wall -Wextra -Werror -lpthread -D_REENTRANT

# Linker options
libgame_la_LDFLAGS = -avoid-version

# Source files
libgame_la_SOURCES = \
bg_animation.c \
bg_animgroup.c \
bg_character.c \
bg_classes.c \
bg_misc.c \
bg_pmove.c \
bg_slidemove.c \
bg_sscript.c \
bg_tracemap.c \
bg_weapons.c \
g_active.c \
g_alarm.c \
g_antilag.c \
g_character.c \
g_client.c \
g_cmds.c \
g_cmds_ext.c \
g_combat.c \
g_fireteams.c \
g_items.c \
g_main.c \
g_match.c \
g_mem.c \
g_misc.c \
g_missile.c \
g_mover.c \
g_props.c \
g_referee.c \
g_script.c \
g_script_actions.c \
g_session.c \
g_spawn.c \
g_sv_entities.c \
g_svcmds.c \
g_syscalls.c \
g_systemmsg.c \
g_target.c \
g_team.c \
g_teammapdata.c \
g_trigger.c \
g_utils.c \
g_vote.c \
g_weapon.c \
q_math.c \
q_shared.c \
g_buddy_list.c \
g_construction.c \
g_api.c \
g_apicmds.c
