lib_LTLIBRARIES = libui.la

# Compilation flags
libui_la_CFLAGS = -DUIDLL -pipe -Wall -Werror -fno-strict-aliasing

# Linker options
libui_la_LDFLAGS = -avoid-version

# Source files
libui_la_SOURCES = \
ui_atoms.c \
ui_gameinfo.c \
ui_loadpanel.c \
ui_main.c \
ui_players.c \
ui_shared.c \
ui_syscalls.c \
ui_util.c \
../game/bg_classes.c \
../game/bg_misc.c \
../game/q_math.c \
../game/q_shared.c
